Fix display on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
   }
 
   .main{
-      height: calc(100vh - 80px);
+      height: calc(100vh - 65px);
       min-height: 150px;
       display: flex;
       flex-direction: column;
@@ -84,5 +84,70 @@
   }
 
   .footer{
-      height: 40px;
+      height: 25px;
+  }
+
+
+  @media screen and (max-width: 420px){
+      body{
+          width: 100vw;
+          height: 100vh;
+      }
+
+      .form{
+          margin-bottom: 40px;
+      }
+
+      .card{
+        width: 100%;
+        height: 100px;
+        display: flex;
+    }
+  
+    .city-name{
+        height: 100%;
+        width: 65%;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+    }
+  
+    .weather-info{
+        width: 35%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+  
+    .weather-icon{
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+  
+    .weather-icon>img{
+        max-height: 100%;
+        aspect-ratio: 1;
+    }
+  
+    .temperature{
+        height: 50%;
+        display: flex;
+    }
+  
+    .temp-value{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+  
+    .units{
+        cursor: pointer;
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
   }
